# AYED-API

./: .gitignore  CMakeLists.txt  README.md
src/: principal.cpp
src/biblioteca/funciones/: arrays.hpp  files.hpp  strings.hpp  tokens.hpp
src/biblioteca/tads/: Array.hpp  Coll.hpp
